# pomodoro

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
cmake/: clang_format.cmake
data/: CMakeLists.txt  com.github.hellokartikey.pomodoro.yml  io.github.hellokartikey.pomodoro.desktop  io.github.hellokartikey.pomodoro.yml  pomodoro.notifyrc  python3-conan.json
src/: CMakeLists.txt  about.cpp  about.hpp  backend.cpp  backend.hpp  common.hpp  config.cpp  config.hpp  main.cpp  misc.cpp  misc.hpp  notification.cpp  notification.hpp  pomodoro.notifyrc
src/qml/: CMakeLists.txt  Clock.qml  Header.qml  Main.qml  Settings.qml
