set(DESKTOP_FILE com.github.hellokartikey.${PROJECT_NAME}.desktop)
set(NOTIFY_FILE ${PROJECT_NAME}.notifyrc)

install(FILES ${DESKTOP_FILE} DESTINATION ${KDE_INSTALL_APPDIR})
install(FILES ${NOTIFY_FILE} DESTINATION ${KDE_INSTALL_KNOTIFYRCDIR})

install(FILES end.ogg DESTINATION ${KDE_INSTALL_DATADIR}/${PROJECT_NAME})
install(FILES start.ogg DESTINATION ${KDE_INSTALL_DATADIR}/${PROJECT_NAME})
