set(DESKTOP_FILE io.github.hellokartikey.pomodoro.desktop)
set(NOTIFY_FILE pomodoro.notifyrc)

install(FILES ${DESKTOP_FILE} DESTINATION ${KDE_INSTALL_APPDIR})
install(FILES ${NOTIFY_FILE} DESTINATION ${KDE_INSTALL_KNOTIFYRCDIR})

install(FILES end.ogg DESTINATION ${KDE_INSTALL_DATADIR}/${PROJECT_NAME})
install(FILES start.ogg DESTINATION ${KDE_INSTALL_DATADIR}/${PROJECT_NAME})
